--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-/* line 6, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 6, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   -webkit-margin-after: 0em;
   -webkit-margin-before: 0em;
@@ -13,73 +13,81 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   padding: 0;
   vertical-align: baseline; }
 
-/* line 20, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 20, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; }
 
-/* line 23, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 23, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 body {
   line-height: 1; }
 
-/* line 26, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 26, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 ol, ul {
   list-style: none; }
 
-/* line 29, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 29, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 blockquote, q {
   quotes: none; }
 
-/* line 33, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 33, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 blockquote:before, blockquote:after {
   content: "";
   content: none; }
 
-/* line 39, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 39, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 q:before, q:after {
   content: "";
   content: none; }
 
-/* line 44, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_reset.scss */
+/* line 44, /Users/Matt/Projects/shawnas-site/source/stylesheets/_reset.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 2, /Users/Matt/Desktop/shawnas-site/source/stylesheets/_special.scss */
+/* line 2, /Users/Matt/Projects/shawnas-site/source/stylesheets/_special.scss */
 .suGender .m-lead {
   background-image: url("/images/sugender.jpg"); }
 
-/* line 1, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 1, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 body {
   line-height: 1.75em;
   color: #3C3C3C; }
 
-/* line 6, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 6, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 img,
 video {
   width: 100%; }
 
-/* line 11, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 11, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 .m-article {
   padding-bottom: 1em; }
 
-/* line 15, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 15, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 .m-lead {
   height: 0%;
   padding-bottom: 54%;
   background-size: cover; }
 
-/* line 21, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 21, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 .m-content-container {
   margin: 2.25% 0%; }
-  /* line 24, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+  /* line 24, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
   .m-content-container .m-content {
     width: 50%;
     margin: 0 auto; }
-  /* line 32, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+    @media (max-width: 1200px) {
+      /* line 24, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+      .m-content-container .m-content {
+        width: 70%; } }
+    @media (max-width: 600px) {
+      /* line 24, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+      .m-content-container .m-content {
+        width: 90%; } }
+  /* line 41, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
   .m-content-container img,
   .m-content-container video {
     margin: 2em 0em; }
-  /* line 36, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+  /* line 45, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
   .m-content-container h1 {
     font-family: "Playfair Display", serif;
     font-size: 4em;
@@ -88,23 +96,35 @@ video {
     line-height: 1em;
     margin-top: .65em;
     margin-bottom: .25em; }
-  /* line 45, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+    @media (max-width: 900px) {
+      /* line 45, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+      .m-content-container h1 {
+        font-size: 3em; } }
+    @media (max-width: 600px) {
+      /* line 45, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+      .m-content-container h1 {
+        font-size: 2em; } }
+  /* line 60, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
   .m-content-container h2 {
     font-family: "Playfair Display", serif;
     font-size: 1.25em;
     font-weight: 500;
     margin-bottom: 2em; }
-  /* line 51, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+    @media (max-width: 900px) {
+      /* line 60, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+      .m-content-container h2 {
+        font-size: 1em; } }
+  /* line 69, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
   .m-content-container p {
     font-family: "Open Sans", sans-serif;
     font-size: 1em;
     margin-bottom: 1em; }
 
-/* line 58, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 76, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 .quote-left,
 .quote-right {
   width: 40%; }
-  /* line 61, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+  /* line 79, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
   .quote-left p,
   .quote-right p {
     font-family: "Playfair Display", serif;
@@ -112,15 +132,32 @@ video {
     font-size: 2em;
     line-height: 1.1em;
     margin-bottom: .5em; }
+  @media (max-width: 900px) {
+    /* line 76, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+    .quote-left,
+    .quote-right {
+      width: 100%; } }
 
-/* line 70, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 97, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 .quote-left {
   float: left;
   padding-right: 5%;
   margin-left: -15%; }
+  @media (max-width: 900px) {
+    /* line 97, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+    .quote-left {
+      float: none;
+      padding-right: 0%;
+      margin-left: 0%; } }
 
-/* line 76, /Users/Matt/Desktop/shawnas-site/source/stylesheets/styles/_main.scss */
+/* line 108, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
 .quote-right {
   float: right;
   padding-left: 5%;
   margin-right: -15%; }
+  @media (max-width: 900px) {
+    /* line 108, /Users/Matt/Projects/shawnas-site/source/stylesheets/styles/_main.scss */
+    .quote-right {
+      float: none;
+      padding-left: 0%;
+      margin-right: 0%; } }
